Changelog
=========

1.9 (unreleased)
----------------

- Avoid a unicode error when there is no body.
  [maurits]

- Optionally add attachments from the e-mail.  We look for binary
  attachments.  These are added as separate responses, as you can only
  add one attachment per issue or response.  In config.py we have
  added a setting ADD_ATTACHMENTS for this (default True) to make it a
  bit easier to switch this off in case of problems or when you do not
  want it.
  [maurits]

- Fixed handling multipart messages that have parts that themselves
  are multipart.
  [maurits]

- When there is an empty or missing Subject line, use '[no subject]'
  as title.  We do not try to match such a mail to a previous issue
  but always create a new one.
  [maurits]


1.8 (2011-11-10)
----------------

- Set more fields explicitly, as the createObjectByType call only sets
  some of them.
  [maurits]


1.7 (2011-11-09)
----------------

- When a subject (keyword, category) is given, set that explicitly.
  [maurits]

- In ``get_addresses`` allow getting addresses from headers other than
  To and From as well.
  [maurits]


1.6 (2011-09-06)
----------------

- Prevent issues from being automatically renamed after they are
  edited.
  [maurits]

- Prevent some more lower-case email address comparison problems.
  [maurits]


1.5 (2011-06-22)
----------------

- Make e-mail from address lower-case to prevent search problems with ldap
  users. [jladage]


1.4 (2011-06-14)
----------------

- When searching PAS for a user by email address, strip off any white
  space (like possibly '\r\n' in ldap) from the returned addresses, to
  avoid non-matching for silly reasons.
  [maurits]

- Moved all options to a new config.py file.
  [maurits]

- Add option ADVANCED_SUBJECT_MATCH.  Default is False: we only check
  for '#123' in the Subject line, to avoid matching overly generic
  Subject lines like 'Hi' or 'Problem'.  To get back the previous